<resources>
    <string name="app_name">Travl</string>
    <string name="travl">TRAVL</string>
    <string name="sign_in">Войти</string>
    <string name="create_acc">Создать аккаунт</string>
    <string name="name">Имя пользователя</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="main">Главная</string>
    <string name="plans">Планы</string>
    <string name="profile">Профиль</string>
    <string name="friends">Друзья</string>
    <string name="delete">Удалить</string>
    <string name="welcome_back_title">С возвращением</string>
    <string name="log_in_account">Войдите в аккаунт</string>
    <string name="log_in">Войти</string>
    <string name="have_not_account">У вас еще нет аккаунта?</string>
    <string name="already_reg">Уже есть аккаунт?</string>
    <string name="reset_password_title">Сброс пароля</string>
    <string name="new_password">Новый пароль</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="avatar">Аватар</string>
    <string name="edit_profile">Редактировать \nпрофиль</string>
    <string name="add_friend">Добавить \nдруга</string>
    <string name="email_hint">email@mail.ru</string>
    <string name="password_hint">password</string>
    <string name="name_hint">Name</string>
    <string name="to_the_list">В мои планы</string>
    <string name="list_header">Место для твоих путешествий</string>
    <string name="my_plans">Мои планы</string>
    <string name="share">Друзьям</string>
    <string name="joint_plans">Совместные планы</string>
    <string name="score_icon">Иконка звезды</string>
    <string name="region_example">Краснодарский край</string>
    <string name="place_example">Гуамское ущелье</string>
    <string name="geo_icon">Иконка геолокации</string>
    <string name="place_image">Фото места</string>
    <string name="place">Место</string>
    <string name="score">Оценка</string>
    <string name="flag">Флаг</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="friend">add friends</string>
    <string name="edit">Редактировать</string>
    <string name="profileLower">профиль</string>
    <string name="MyPlans">Мои планы</string>
    <string name="add">Добавить</string>
    <string name="frienda">друга</string>
    <string name="friendAddText">Введите имя пользователя, которого вы хотите добавить в друзья</string>
    <string name="send">Отправить</string>
    <string name="changePhoto">Сменить фото</string>
    <string name="Name">Имя</string>
    <string name="passwordClose">********</string>
    <string name="accept">Применить</string>
    <string name="cur_password">Текущий пароль</string>
    <string name="joint">Совместные</string>
    <string name="plansWith">планы с :</string>
    <string name="yourFriends">Ваши\nдрузья</string>
    <string name="friendRequests">Заявки\nв друзья</string>
    <string name="choose_friend">Выберете друга</string>
    <string name="close">Закрыть</string>
    <string name="complete">Выполнено</string>
    <string name="friends_count">Друзей</string>
    <string name="plans_count">Моих планов</string>
    <string name="complete_plans">Выполненные планы</string>
</resources>
