<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_cut"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp"
    tools:context=".pages.SignIn">

    <include
        android:id="@+id/Title"
        layout="@layout/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:paddingBottom="45dp"
        app:cardCornerRadius="40dp"
        android:backgroundTint="@color/white"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/welcome_back_title"
                android:textColor="#000000"
                android:textFontWeight="800"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/log_in_account"
                android:textColor="#000000"
                android:textFontWeight="200"
                android:textSize="20sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/email"
                android:textColor="#000000"
                android:textFontWeight="200"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="300dp"
                android:layout_height="37dp"
                android:background="@drawable/rounded_btn_5"
                android:backgroundTint="#EBEBEB"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/email_hint"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/soft_grey"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="5dp"
                android:textFontWeight="300"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                tools:ignore="TouchTargetSizeCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/password"
                android:textColor="#000000"
                android:textFontWeight="200"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="300dp"
                android:layout_height="37dp"
                android:background="@drawable/rounded_btn_5"
                android:backgroundTint="#EBEBEB"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password_hint"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/soft_grey"
                android:inputType="textPassword"
                android:paddingHorizontal="5dp"
                android:textFontWeight="300"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/forget_password"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="175dp"
                android:layout_height="38dp"
                android:layout_gravity="end"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/forget_password"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                android:textColor="#EA8710"
                android:textFontWeight="400"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/reg_button"
                android:layout_width="300dp"
                android:layout_height="37dp"
                android:background="@drawable/rounded_btn_5"
                android:backgroundTint="#EA8710"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textFontWeight="800"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/have_not_account"
                    android:textColor="#000000"
                    android:textFontWeight="200"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/sign_in"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="175dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingTop="0dp"
                    android:text="@string/register"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#EA8710"
                    android:textFontWeight="400"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>