<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_bar_background"
        android:orientation="horizontal"
        android:padding="9dp"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/main_page_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/main"
            android:padding="10dp"
            android:src="@drawable/main_page_icon" />

        <ImageButton
            android:id="@+id/my_plans_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_black"
            android:contentDescription="@string/plans"
            android:padding="10dp"
            android:src="@drawable/plans_icon_white" />

        <ImageButton
            android:id="@+id/joint_plans_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/friends"
            android:padding="10dp"
            android:src="@drawable/friends_icon" />

        <ImageButton
            android:id="@+id/profile_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/profile"
            android:padding="10dp"
            android:src="@drawable/profile_icon" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>