<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_dark"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp">

    <include
        android:id="@+id/Title"
        layout="@layout/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:backgroundTint="@color/white"
        android:paddingBottom="45dp"
        app:cardCornerRadius="40dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/register"
                android:textColor="#000000"
                android:textSize="25sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="300dp"
                android:layout_height="37dp"
                android:background="@drawable/rounded_btn_5"
                android:backgroundTint="#EBEBEB"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/name_hint"
                android:autofillHints="username"
                android:inputType="text"
                android:paddingHorizontal="5dp"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/soft_grey"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                tools:ignore="TouchTargetSizeCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="300dp"
                android:layout_height="37dp"
                android:background="@drawable/rounded_btn_5"
                android:backgroundTint="#EBEBEB"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/email_hint"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="5dp"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/soft_grey"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                tools:ignore="TouchTargetSizeCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="300dp"
                android:layout_height="37dp"
                android:background="@drawable/rounded_btn_5"
                android:backgroundTint="#EBEBEB"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password_hint"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:paddingHorizontal="5dp"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/soft_grey"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                tools:ignore="TouchTargetSizeCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="40dp" />


            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="300dp"
                android:layout_height="37dp"
                android:background="@drawable/rounded_btn_5"
                android:backgroundTint="#EA8710"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/already_reg"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/alreadyHaveAccountButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="70dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingStart="-5dp"
                    android:text="@string/log_in"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#EA8710"
                    android:textFontWeight="300"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck,UnusedAttribute" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>